--- a/content/practice/HTML/test.html
+++ b/content/practice/HTML/test.html
@@ -1,7 +1,9 @@
-<!DOCTYPE html>
 <html lang='en'>
   <button hello disabled>hello</button>
-
+  <!DOCTYPE html>
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous">
+    console.log(1111)
+  </script>
   <div id="hello" hello></div>
 
 </html>
